# EmployeesDjango

./: README.md  db.sqlite3  manage.py  pyproject.toml
TestTaskEmploees/: asgi.py  settings.py  urls.py  wsgi.py
emploees/: admin.py  apps.py  models.py  routs.py  serializers.py  views.py
emploees/migrations/: 0001_initial.py  0002_alter_emploees_function_alter_emploees_person.py
test_task_employees/: asgi.py  settings.py  urls.py  wsgi.py
